<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="6dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="8dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:elevation="10dp"
            android:gravity="right"
            android:background="@color/background_color"
            android:alpha="0.6">

            <TextView
                android:id="@+id/username_textview_row"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_username"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:padding="2dp"
                android:layout_weight="1"/>

            <ImageButton
                android:id="@+id/share_imageview_btn_row"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_share"
                android:background="@android:color/transparent"
                android:padding="2dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageview_row"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="fitXY"
                android:src="@drawable/great_tree" />

            <TextView
                android:id="@+id/title_textview_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/sample_title"
                android:layout_margin="4dp"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/thought_textview_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/sample_thought"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/timestamp_textview_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample_timestamp"

                android:layout_margin="2dp"
                android:textStyle="italic"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>